Upgrade Java 11 to 21 - cleanup