@@ -345,6 +345,7 @@ package jscover.server;
 import java.io.InputStream;
 import java.io.OutputStream;
 import java.net.MalformedURLException;
+import java.net.URI;
 import java.net.URL;
 import java.net.URLDecoder;
 import java.nio.charset.Charset;
@@ -365,7 +366,7 @@ public class HttpRequest {
         this.postIndex = postIndex;
         this.headers = headers;
         try {
-            this.url = new URL(path);
+            this.url = URI.create(path).toURL();
             this.path = urlDecode(url.getPath());
         } catch (MalformedURLException e) {
             path = urlDecode(path);
@@ -421,7 +422,7 @@ public class HttpRequest {
     }
 
     public int getContentLength() {
-        return Integer.parseInt(headers.get("Content-Length").get(0));
+        return Integer.parseInt(headers.get("Content-Length").getFirst());
     }
 
     public boolean skipInstrumentation() {
